--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "celebrate": "^12.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.1",
     "express-winston": "^4.0.3",
+    "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
     "validator": "^13.0.0",
